--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.17.0",
     "file-saver": "^2.0.5",
     "i": "^0.3.6",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "mui-datatables": "^3.7.6",
     "node-sass": "^4.14.1",
